--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next -p 3027",
     "build": "next build",
-    "start": "next start -p 3007",
+    "start": "next start -p 3027",
     "type-check": "tsc"
   },
   "dependencies": {
@@ -23,6 +23,9 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.4.4",
+    "next-compose-plugins": "^2.2.1",
+    "next-plugin-svgr": "^1.1.1",
+    "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.12",
     "postcss-preset-env": "^7.4.3",
     "prettier": "^2.6.0",
