--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
     "next": "latest",
     "next-auth": "^4.3.1",
     "nodemailer": "^6.7.3",
