--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^6.7.3",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
